--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/manifest.json
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/manifest.json
@@ -102,20 +102,35 @@
 				"payment": {
 					"weixin": {
 						"description": "微信支付",
-						"appid": "wxa305a32371b65619"
+						//旧的appid
+						//"appid": "wxa305a32371b65619"
+						//新的appid
+						"appid": "wx1915653b1958f7d6"
 					}
 				},
 				"share": {
 					"weixin": {
-						"appid": "wxa305a32371b65619",
-						"appsecret": "0010a787ec3751c355681d1b9aaede73",
+						//旧的appid
+						//"appid": "wxa305a32371b65619",
+						//新的appid
+						"appid": "wx1915653b1958f7d6",
+						//旧的appsecret
+						//"appsecret": "0010a787ec3751c355681d1b9aaede73",
+						//新的appsecret
+						"appsecret": "965c63ce5c9150a26234c5f73cdc788c",
 						"description": "可选，微信分享"
 					}
 				},
 				"oauth": {
 					"weixin": {
-						"appid": "wxa305a32371b65619",
-						"appsecret": "0010a787ec3751c355681d1b9aaede73"
+						//旧的appid
+						//"appid": "wxa305a32371b65619",
+						//新的appid
+						"appid": "wx1915653b1958f7d6",
+						//旧的appsecret
+						//"appsecret": "0010a787ec3751c355681d1b9aaede73"
+						//新的appsecret
+						"appsecret": "965c63ce5c9150a26234c5f73cdc788c"
 					}
 				}
 			},
