--- a/android_kankan/app/build.gradle
+++ b/android_kankan/app/build.gradle
@@ -8,6 +8,11 @@ android {
         checkReleaseBuilds false
     }
 
+    aaptOptions {
+        cruncherEnabled false
+        useNewCruncher false
+    }
+
     defaultConfig {
         applicationId "com.sunseer.kankan"
         minSdkVersion 8
