--- a/kankan/manifest.json
+++ b/kankan/manifest.json
@@ -403,7 +403,9 @@
 					"js/language/locale_ja_JP.js",
 					"js/language/locale_zh_CN.js",
 					"images/nopic.jpg",
-					"images/weixin2.png"
+					"images/weixin2.png",
+					"css/iconmyfont.css",
+					"fonts/iconfont.woff"
 				],
 				"refer": [
 					"pages/main/products/pro_commentslist.html",
@@ -475,7 +477,10 @@
 					"pages/main/news.html",
 					"pages/main/category/tab-top-subpage-6.html",
 					"pages/main/category/tab-top-subpage-7.html",
-					"pages/main/category/tab-top-subpage-14.html"
+					"pages/main/category/tab-top-subpage-14.html",
+					"pages/main/category/tab-top-subpage-8.html",
+					"pages/main/category/tab-top-subpage-9.html",
+					"pages/main/category/tab-top-subpage-10.html"
 				],
 				"priority": 0
 			},
@@ -493,7 +498,8 @@
 					"js/language/locale_zh_CN.js",
 					"fonts/mui-icons-extra.ttf",
 					"css/iconfontwuliu.css",
-					"fonts/iconfont.woff"
+					"fonts/iconfont.woff",
+					"css/iconmyfont.css"
 				],
 				"refer": [
 					"pages/main/products/product_login.html",
@@ -544,7 +550,8 @@
 					"images/nopic.jpg",
 					"js/language/locale_ja_JP.js",
 					"js/mui.pullToRefresh.js",
-					"js/mui.pullToRefresh.material.js"
+					"js/mui.pullToRefresh.material.js",
+					"images/userPhoto.png"
 				],
 				"refer": [
 					"pages/login/login.html",
@@ -749,7 +756,8 @@
 					"js/language.js",
 					"css/mui.min.css",
 					"fonts/mui.ttf",
-					"css/kankan_home.css"
+					"css/kankan_home.css",
+					"images/nopic.jpg"
 				],
 				"refer": [
 					"pages/main/products/translatelist.html",
@@ -787,11 +795,13 @@
 					"css/mui.min.css",
 					"js/language.js",
 					"images/morebut.png",
-					"images/nopic.jpg"
+					"images/nopic.jpg",
+					"images/jiantou.png"
 				],
 				"refer": [
 					"pages/transaction/transevaluate.html",
-					"pages/transaction/change_item.html"
+					"pages/transaction/change_item.html",
+					"pages/main/logisticslist2.html"
 				],
 				"priority": 0
 			},
@@ -886,7 +896,9 @@
 					"js/mui.view.js",
 					"js/language/locale_ja_JP.js",
 					"pages/setting/specialbus.html",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"css/kankan_home.css",
+					"css/icons-extra.css"
 				],
 				"refer": [
 					"pages/setting/question.html"
@@ -1053,6 +1065,47 @@
 			"pages/main/category/tab-top-subpage-14.html": {
 				"resources": [
 					"pages/main/category/pullrefresh_sub_14.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/logisticslist2.html": {
+				"resources": [
+					"css/feedback.css",
+					"css/wu.css",
+					"js/language/locale_zh_CN.js",
+					"css/kankan_home.css",
+					"css/icons-extra.css",
+					"js/common.js",
+					"js/mui.min.js",
+					"js/jquery-3.2.0.min.js",
+					"js/sha256.js",
+					"css/mui.min.css",
+					"js/language.js",
+					"images/car.png",
+					"js/feedback.js",
+					"js/mui.view.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/category/tab-top-subpage-8.html": {
+				"resources": [
+					"pages/main/category/pullrefresh_sub_8.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/category/tab-top-subpage-9.html": {
+				"resources": [
+					"pages/main/category/pullrefresh_sub_9.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pages/main/category/tab-top-subpage-10.html": {
+				"resources": [
+					"pages/main/category/pullrefresh_sub_10.html"
 				],
 				"refer": [],
 				"priority": 0
