--- a/android_kankan/app/build.gradle
+++ b/android_kankan/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
+    compileSdkVersion 26
     buildToolsVersion "25.0.3"
 
     lintOptions {
@@ -15,8 +15,8 @@ android {
 
     defaultConfig {
         applicationId "com.sunseer.kankan"
-        minSdkVersion 8
-        targetSdkVersion 8
+        minSdkVersion 19
+        targetSdkVersion 26
     }
 
     buildTypes {
@@ -28,7 +28,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:20.0.0'
     compile files('libs/aps-igexin.jar')
     compile files('libs/aps.jar')
     compile files('libs/camera.jar')
@@ -58,4 +57,9 @@ dependencies {
     compile files('libs/ui.jar')
     compile files('libs/uploader.jar')
     compile files('libs/xhr.jar')
+    compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
