android打包工程更新

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /android_kankan/keystore.keystore
 /android_kankan/app/*.iml
 /android_kankan/app/src/main/assets/apps
+/android_kankan/local.properties
